# StoryWeaver

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  QWEN.md  README.md  compile_emperor.py  pyproject.toml  run_compile.py
configs/: default.yaml  models.yaml
configs/name_mappings/: README.md  harry_potter_1_names.json
data/: HARRY_POTTER_COMPILATION_GUIDE.md
docs/: TEMPORAL_PROGRESSION.md
examples/books/: emperor_new_clothes.txt
scripts/: analyze_hp_false_positives.py  audit_extraction_quality.py  check_bundle.py  clean_extraction.py  compile_dolan_world.py  compile_hp_world.py  compile_world.py  global_diagnostic.py  icecast_streamer.py  ingest_book.py  monitor_dolan.py  monitor_extraction.ps1  quick_demo.py  run_extraction.py  temporal_progression_patch.py  test_cover_music.py  test_icecast_stream.py  validate_entities.py  web_ui.py  web_ui_emperor.py  web_ui_v2.py
storyweaver/: __init__.py
storyweaver/agents/: author_ghost.py  base_agent.py  character_agent.py  memory.py  psychology.py
storyweaver/cli/: compile.py  inspect.py  main.py  play.py
storyweaver/compiler/: agent_builder.py  chapter_builder.py  graph_builder.py  rules_builder.py  world_builder.py
storyweaver/extraction/: cache.py  pass_psychology.py  pass_relations.py  pass_structure.py  pass_symbolism.py  pipeline.py
storyweaver/ingestion/: cleaner.py  loader.py  segmenter.py
storyweaver/world/: __init__.py  (+7 more)
tests/: test_agents.py  test_extraction.py  test_ingestion.py  test_integration.py  test_interaction.py  test_temporal_progression.py  test_world_models.py
(+24 files in other folders)
